components/list/projectList.module.css
.pageContainer {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  min-height: 100vh;
  margin: auto;
  position: relative;
  padding-bottom: 2rem;
}

.projectContainer {
  position: relative;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 1rem;
  margin: 1rem;
  max-width: 80vw;
  text-align: justify;
  border-radius: var(--border-radius-container);
  /*background-color: rgba(101, 133, 169, 0.1);
  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);*/
}

.projectPointContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 3rem;
  padding: 1rem;
  text-align: center;
  text-decoration: none;
  /*
  background-color: rgba(255, 255, 2555, 0.1);
  border-radius: var(--border-radius-content);
   */
}

.projectPoint {
  width: 4rem;
  height: 4rem;
  border-radius: 50%;
  /*border-radius: 50% 50% 0 0;*/ /*Tor statt Punkt*/
  display: flex;
  align-items: center;
  justify-content: center;
  transition: transform 0.2s;
  box-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
}

.projectPoint:hover {
  transform: scale(1.2);
  cursor: pointer;
  background-color: var(--link-color)
}

.projectTitle {
  margin-top: 1rem;
  text-align: center;
}

.projectAuthor {
  margin-top: 0.5rem;
  font-weight: var(--font-weight-light);
}

.waveContainer {
  position: fixed; /* Fixiert das Wellenelement */
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  overflow-x: hidden;
  pointer-events: none; /* Macht es nicht interaktiv */
}

.wave {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 200%;
  height:100%;
  background: url('/icons/wave.svg');
  animation: wave 30s linear infinite;
  opacity: 0.05;
  pointer-events: none;
}

@keyframes wave {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%);
  }
}

.backgroundImage {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url('/icons/gondel_unter_wasser_2.svg');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  opacity: 0.4; 
  z-index: -1;
}

.title {
  position: absolute; 
  bottom: 2rem; 
  left: 50%; 
  transform: translateX(-50%);
  font-size: 1rem; 
  text-align: center;
  opacity: 0.5;
}

.title a {
  color: var(--text-color);
  opacity: 0.4;
  text-decoration: none;
}

.title a:hover {
  color: var(--link-hover-color);
  opacity: 0.8;
}

